# e-nguyen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.circleci/: config.yml
.circleci/images/: Dockerfile
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benches/: fft.rs
licensing/: CATALOG.md  SIL OPEN FONT LICENSE.txt  lgpl3-header.txt
src/: application.rs  audio.rs  compute.rs  config.rs  errors.rs  ewin.rs  input.rs  main.rs  mesmerize.rs  rendering.rs  ring.rs  settings.rs
