[package]
name = "e-nguyen"
description = "Build your own music visualizations"
version = "0.1.2"
readme = "README.md"
keywords = ["vulkan", "3D", "graphics", "audio", "math"]
categories = ["graphics", "multimedia", "visualization"]
authors = ["E-Nguyen Developers", "Knapp <knappador@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/e-nguyen/e-nguyen"
edition = "2018"
maintenance = { status = "actively-developed" }

[dependencies]
image = "0.21.0"

# stdlib upgrades
failure = "0.1.5" # civilized errors

# command line options
docopt = "1.0.2"

# logging
log = "0.4.6"
env_logger = "0.6.0"

# Settings UI & config handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
lazy_static = "1.3.0" # config uses a mutex to guard the file
vulkano-glyph = "0.4.0" # config text
rusttype = "0.7.5" # config text

# GPU drawing
vulkano = "0.11.1"
vulkano-win = "0.11.1"
vulkano-shaders = "0.11.1"

# Sound input
libpulse-binding = "2.5.0" # Pulse Audio Linux sound server client
rustfft = "3.0.0" # spectrum analysis
byteorder = "1.3.1" # reading / writing bytes <-> audio
bytes = "0.4.12" # reliable reusable buffers

# Window library
[dependencies.winit]
version = "0.19.3"
features = ["icon_loading"]

# Performance diagnosis
[dev-dependencies]
criterion = "0.2"

[[bench]] 
name = "fft"
harness = false
